# rust-fe-app-1

./: Cargo.toml
src/: Data-type.rs  main.rs
